netcfg (0.46) UNRELEASED; urgency=low

  * Joshua Kwan
    - Added wireless configuration support for ESSIDs and WEP keys
      using libiw.
  * Joey Hess
    - First round of template polishing on new templates.
  * Translations:
    - Miroslav Kure
      - Updated Czech translation
    - Elian Myftiu
      - Updated Albanian translation (sq.po)

 -- Miroslav Kure <kurem@debian.cz>  Sun, 22 Feb 2004 20:27:38 +0100

netcfg (0.45) unstable; urgency=low

  * Joey Hess
    - Use just one prebaseconfig script for all three netcfg programs.
      This is to simplify the necessary progress templates.
    - Add a prebaseconfig progress template.
  * Translations :
    - André Luís Lopes
      - Updated Brazilian Portuguese translations (pt_BR.po)
    - Kenshi Muto
      - Updated Japanese translation (ja.po)
    - Changwoo Ryu
      - Added Korean translation (ko.po)
    * Claus Hindsgaul
      - Updated Danish translation (da.po)
    - Eugeniy Meshcheryakov
      - Updated Ukrainian translation (uk.po)
    - Kęstutis Biliūnas
      - Updated Lithuanian translation (lt.po)
    - Carlos Z.F. Liu
      - Updated Simplified Chinese translation (zh_CN.po)
    - Konstantinos Margaritis
      - Updated Greek translation (el.po)

 -- Joey Hess <joeyh@debian.org>  Sat, 21 Feb 2004 14:57:37 -0500

netcfg (0.44) unstable; urgency=low

  * Translators:
    - Peter Mann: Update Slovak translation
    - Miguel Figueiredo : Updated pt.po
    - Carlos Z.F. Liu
      - fix some serious errors in Simplified Chinese translation.
    - h3li0s: added albanian translation sq.po
    - Jordi Mallach: Update Catalan translation (ca.po).
  * Eugen Meshcheryakov : added Ukrainian translation (uk.po)

 -- Christian Perrier <bubulle@debian.org>  Sun,  8 Feb 2004 20:26:40 +0100

netcfg (0.43) unstable; urgency=low

  * Steinar H. Gunderson
    - The state machine in netcfg-dhcp was broken and never really
      activated DHCP; fixed.
